--- a/app/src/main/res/layout/activity_transferencias_lista.xml
+++ b/app/src/main/res/layout/activity_transferencias_lista.xml
@@ -5,6 +5,6 @@
     android:id="@+id/listatransferencias1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TransferenciasActivity">
+    tools:context=".Activity.TransferenciasActivity">
 
 </ListView>
