--- a/app/src/main/res/layout-xlarge-land/activity_cambiar_contrasenya.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_cambiar_contrasenya.xml
@@ -8,7 +8,7 @@
     android:layout_marginLeft="25dp"
     android:layout_marginRight="25dp"
     android:minHeight="0dp"
-    tools:context=".cambiarContrasenya">
+    tools:context=".Activity.cambiarContrasenya">
 
     <ImageButton
         android:id="@+id/imageButton2"
