--- a/app/src/main/res/layout/activity_cambiar_contrasenya.xml
+++ b/app/src/main/res/layout/activity_cambiar_contrasenya.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="50dp"
     android:minHeight="0dp"
-    tools:context=".cambiarContrasenya">
+    tools:context=".Activity.cambiarContrasenya">
 
     <ImageButton
         android:id="@+id/imageButton2"
