--- a/app/src/main/res/layout/dialog_movimientos.xml
+++ b/app/src/main/res/layout/dialog_movimientos.xml
@@ -60,6 +60,7 @@
         android:layout_marginBottom="8dp"
         android:text="importe"
         android:textAlignment="textStart"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline22"
         app:layout_constraintEnd_toStartOf="@+id/guideline21"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,6 +77,7 @@
         android:layout_marginBottom="8dp"
         android:text="importe"
         android:textAlignment="textEnd"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline22"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline21"
