--- a/app/src/main/res/menu/menu_post_login.xml
+++ b/app/src/main/res/menu/menu_post_login.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/contrasenyaitem"
-        android:title="@string/cambiarcontrasenya"
+    <item
+        android:id="@+id/contrasenyaitem"
         android:orderInCategory="100"
+        android:title="@string/cambiarcontrasenya"
+
         app:showAsAction="never" />
     <item android:id="@+id/transferenciasitem"
         android:title="@string/transferencias"
