--- a/app/src/main/res/menu/menu_post_login.xml
+++ b/app/src/main/res/menu/menu_post_login.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/contrasenyaitem"
-        android:orderInCategory="100"
+    <item android:id="@+id/contrasenyaitem"
         android:title="@string/cambiarcontrasenya"
-
-        app:showAsAction="never" />
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        android:icon="@android:drawable/arrow_down_float"
+        />
     <item android:id="@+id/transferenciasitem"
         android:title="@string/transferencias"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:icon="@android:drawable/btn_minus"
+        />
     <item android:id="@+id/posicionglobalitem"
         android:title="@string/posicionglobal"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:icon="@android:drawable/bottom_bar"
+        />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:icon="@android:drawable/sym_call_incoming"
+        />
 </menu>
