--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,7 +7,7 @@
     tools:context=".Activity.Settings">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button2view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="0dp"
