--- a/app/src/main/res/menu/menu_post_login.xml
+++ b/app/src/main/res/menu/menu_post_login.xml
@@ -2,25 +2,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/contrasenyaitem"
-        android:title="@string/cambiarcontrasenya"
+        android:title="@string/changePassOption"
         android:orderInCategory="100"
         app:showAsAction="never"
         android:icon="@android:drawable/arrow_down_float"
         />
     <item android:id="@+id/transferenciasitem"
-        android:title="@string/transferencias"
+        android:title="@string/openTransOption"
         android:orderInCategory="100"
         app:showAsAction="never"
         android:icon="@android:drawable/btn_minus"
         />
     <item android:id="@+id/posicionglobalitem"
-        android:title="@string/posicionglobal"
+        android:title="@string/openGlobalPos"
         android:orderInCategory="100"
         app:showAsAction="never"
         android:icon="@android:drawable/bottom_bar"
         />
     <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+        android:title="@string/openSettings"
         android:orderInCategory="100"
         app:showAsAction="never"
         android:icon="@android:drawable/sym_call_incoming"
